--- a/src/contact.html
+++ b/src/contact.html
@@ -54,7 +54,7 @@
                         <a class="nav-link" href="services.html">Services</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact Us</a>
+                        <a class="nav-link" style="color: #f76d37;" href="contact.html">Contact Us</a>
                      </li>
                      <li class="nav-item">
                         <a class="nav-link" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
