--- a/src/gallery.html
+++ b/src/gallery.html
@@ -48,7 +48,7 @@
                         <a class="nav-link" href="about.html">About Us</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="gallery.html">Gallery</a>
+                        <a class="nav-link" style="color: #f76d37;" href="gallery.html">Gallery</a>
                      </li>
                      <li class="nav-item">
                         <a class="nav-link" href="services.html">Services</a>
