fine ajustment to front end

--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
                </button>
                <div class="collapse navbar-collapse" id="navbarNav">
                   <ul class="navbar-nav ml-auto">
-                     <li class="nav-item active">
+                     <li class="nav-item">
                         <a class="nav-link" style="color: #f76d37;" href="index.html">Home</a>
                      </li>
                      <li class="nav-item">
@@ -126,7 +126,7 @@
                      <div class="about_taital">About Us</div>
                      <p class="about_text">Full cleaning and housekeeping services for companies and households.</p>
                      <p class="about_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.Lorem Ipsum is simply</p>
-                     <div class="read_bt"><a href="#">Read More</a></div>
+                     <div class="read_bt"><a href="about.html">Read More</a></div>
                   </div>
                </div>
                <div class="col-md-6">
@@ -235,7 +235,7 @@
                   </div>
                </div>
             </div>
-            <div class="seemore_bt"><a href="#">See More</a></div>
+            <div class="seemore_bt"><a href="gallery.html">See More</a></div>
          </div>
       </div>
       <!-- gallery section end -->
@@ -258,7 +258,7 @@
                         </div>
                         <h3 class="decorate_text">Original Coffee</h3>
                         <p class="tation_text">Exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea </p>
-                        <div class="readmore_bt"><a href="#">Read More</a></div>
+                        <div class="readmore_bt"><a href="services.html">Read More</a></div>
                      </div>
                   </div>
                   <div class="col-lg-4 col-sm-12 col-md-4">
@@ -269,7 +269,7 @@
                         </div>
                         <h3 class="decorate_text">20 Coffee Flavors</h3>
                         <p class="tation_text">Exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea </p>
-                        <div class="readmore_bt"><a href="#">Read More</a></div>
+                        <div class="readmore_bt"><a href="services.html">Read More</a></div>
                      </div>
                   </div>
                   <div class="col-lg-4 col-sm-12 col-md-4">
@@ -280,7 +280,7 @@
                         </div>
                         <h3 class="decorate_text">Pleasant Abient</h3>
                         <p class="tation_text">Exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea </p>
-                        <div class="readmore_bt"><a href="#">Read More</a></div>
+                        <div class="readmore_bt"><a href="services.html">Read More</a></div>
                      </div>
                   </div>
                </div>
@@ -376,7 +376,8 @@
                            <textarea class="massage-bt" placeholder="Massage" rows="5" id="comment" name="Massage"></textarea>
                         </div>
                         <div class="send_btn">
-                           <div type="text" class="main_bt"><a href="#">SEND</a></div>
+                           <!-- <div type="text" class="main_bt"><a href="#">SEND</a></div> -->
+                           <button class="button btn111">SEND</button>
                         </div>
                      </div>
                   </div>
