--- a/src/services.html
+++ b/src/services.html
@@ -41,7 +41,7 @@
                </button>
                <div class="collapse navbar-collapse" id="navbarNav">
                   <ul class="navbar-nav ml-auto">
-                     <li class="nav-item active">
+                     <li class="nav-item">
                         <a class="nav-link" href="index.html">Home</a>
                      </li>
                      <li class="nav-item">
@@ -56,9 +56,9 @@
                      <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact Us</a>
                      </li>
-                     <li class="nav-item">
+                     <!-- <li class="nav-item">
                         <a class="nav-link" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
-                     </li>
+                     </li> -->
                   </ul>
                </div>
             </nav>
@@ -84,7 +84,7 @@
                         </div>
                         <h3 class="decorate_text">Original Coffee</h3>
                         <p class="tation_text">Exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea </p>
-                        <div class="readmore_bt"><a href="#">Read More</a></div>
+                        <!-- <div class="readmore_bt"><a href="#">Read More</a></div> -->
                      </div>
                   </div>
                   <div class="col-lg-4 col-sm-12 col-md-4">
@@ -95,7 +95,7 @@
                         </div>
                         <h3 class="decorate_text">20 Coffee Flavors</h3>
                         <p class="tation_text">Exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea </p>
-                        <div class="readmore_bt"><a href="#">Read More</a></div>
+                        <!-- <div class="readmore_bt"><a href="#">Read More</a></div> -->
                      </div>
                   </div>
                   <div class="col-lg-4 col-sm-12 col-md-4">
@@ -106,7 +106,7 @@
                         </div>
                         <h3 class="decorate_text">Pleasant Abient</h3>
                         <p class="tation_text">Exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea </p>
-                        <div class="readmore_bt"><a href="#">Read More</a></div>
+                        <!-- <div class="readmore_bt"><a href="#">Read More</a></div> -->
                      </div>
                   </div>
                </div>
