--- a/src/about.html
+++ b/src/about.html
@@ -41,7 +41,7 @@
                </button>
                <div class="collapse navbar-collapse" id="navbarNav">
                   <ul class="navbar-nav ml-auto">
-                     <li class="nav-item active">
+                     <li class="nav-item">
                         <a class="nav-link" href="index.html">Home</a>
                      </li>
                      <li class="nav-item">
@@ -56,9 +56,9 @@
                      <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact Us</a>
                      </li>
-                     <li class="nav-item">
+                     <!-- <li class="nav-item">
                         <a class="nav-link" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
-                     </li>
+                     </li> -->
                   </ul>
                </div>
             </nav>
@@ -74,7 +74,7 @@
                      <div class="about_taital">About Us</div>
                      <p class="about_text">Full cleaning and housekeeping services for companies and households.</p>
                      <p class="about_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.Lorem Ipsum is simply</p>
-                     <div class="read_bt"><a href="#">Read More</a></div>
+                     <!-- <div class="read_bt"><a href="#">Read More</a></div> -->
                   </div>
                </div>
                <div class="col-md-6">
