--- a/src/contact.html
+++ b/src/contact.html
@@ -41,7 +41,7 @@
                </button>
                <div class="collapse navbar-collapse" id="navbarNav">
                   <ul class="navbar-nav ml-auto">
-                     <li class="nav-item active">
+                     <li class="nav-item">
                         <a class="nav-link" href="index.html">Home</a>
                      </li>
                      <li class="nav-item">
@@ -56,9 +56,9 @@
                      <li class="nav-item">
                         <a class="nav-link" style="color: #f76d37;" href="contact.html">Contact Us</a>
                      </li>
-                     <li class="nav-item">
+                     <!-- <li class="nav-item">
                         <a class="nav-link" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
-                     </li>
+                     </li> -->
                   </ul>
                </div>
             </nav>
@@ -78,19 +78,19 @@
                   <div class="mail_section">
                      <div class="email_text">
                         <div class="form-group">
-                           <input type="text" class="email-bt" placeholder="Name" name="Email">
+                           <input type="text" class="email-bt" placeholder="Name" name="Name">
                         </div>
                         <div class="form-group">
                            <input type="text" class="email-bt" placeholder="Email" name="Email">
                         </div>
                         <div class="form-group">
-                           <input type="text" class="email-bt" placeholder="Phone Numbar" name="Email">
+                           <input type="text" class="email-bt" placeholder="Phone Numbar" name="mobile">
                         </div>
                         <div class="form-group">
                            <textarea class="massage-bt" placeholder="Massage" rows="5" id="comment" name="Massage"></textarea>
                         </div>
                         <div class="send_btn">
-                           <div type="text" class="main_bt"><a href="#">SEND</a></div>
+                           <button class="button btn111" onclick="create()">SEND</button>
                         </div>
                      </div>
                   </div>
