--- a/src/gallery.html
+++ b/src/gallery.html
@@ -41,7 +41,7 @@
                </button>
                <div class="collapse navbar-collapse" id="navbarNav">
                   <ul class="navbar-nav ml-auto">
-                     <li class="nav-item active">
+                     <li class="nav-item">
                         <a class="nav-link" href="index.html">Home</a>
                      </li>
                      <li class="nav-item">
@@ -56,9 +56,9 @@
                      <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact Us</a>
                      </li>
-                     <li class="nav-item">
+                     <!-- <li class="nav-item">
                         <a class="nav-link" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
-                     </li>
+                     </li> -->
                   </ul>
                </div>
             </nav>
@@ -164,7 +164,7 @@
                   </div>
                </div>
             </div>
-            <div class="seemore_bt"><a href="#">See More</a></div>
+            <!-- <div class="seemore_bt"><a href="#">See More</a></div> -->
          </div>
       </div>
       <!-- gallery section end -->
