--- a/src/contact.html
+++ b/src/contact.html
@@ -78,16 +78,16 @@
                   <div class="mail_section">
                      <div class="email_text">
                         <div class="form-group">
-                           <input type="text" class="email-bt" placeholder="Name" name="Name">
+                           <input required type="text" class="email-bt" placeholder="Name*" name="Name">
                         </div>
                         <div class="form-group">
-                           <input type="text" class="email-bt" placeholder="Email" name="Email">
+                           <input required type="text" class="email-bt" placeholder="Email*" name="Email">
                         </div>
                         <div class="form-group">
-                           <input type="text" class="email-bt" placeholder="Phone Numbar" name="mobile">
+                           <input required type="text" class="email-bt" placeholder="Phone Number*" name="mobile">
                         </div>
                         <div class="form-group">
-                           <textarea class="massage-bt" placeholder="Massage" rows="5" id="comment" name="Massage"></textarea>
+                           <textarea required class="massage-bt" placeholder="Massage*" rows="5" id="comment" name="Massage"></textarea>
                         </div>
                         <div class="send_btn">
                            <button class="button btn111" onclick="create()">SEND</button>
