--- a/src/index.html
+++ b/src/index.html
@@ -364,16 +364,16 @@
                   <div class="mail_section">
                      <div class="email_text">
                         <div class="form-group">
-                           <input type="text" class="email-bt" placeholder="Name" name="Email">
+                           <input required type="text" class="email-bt" placeholder="Name*" name="Name">
                         </div>
                         <div class="form-group">
-                           <input type="text" class="email-bt" placeholder="Email" name="Email">
+                           <input required type="text" class="email-bt" placeholder="Email*" name="Email">
                         </div>
                         <div class="form-group">
-                           <input type="text" class="email-bt" placeholder="Phone Numbar" name="Email">
+                           <input required type="text" class="email-bt" placeholder="Phone Number*" name="mobile">
                         </div>
                         <div class="form-group">
-                           <textarea class="massage-bt" placeholder="Massage" rows="5" id="comment" name="Massage"></textarea>
+                           <textarea required class="massage-bt" placeholder="Massage*" rows="5" id="comment" name="Massage*"></textarea>
                         </div>
                         <div class="send_btn">
                            <!-- <div type="text" class="main_bt"><a href="#">SEND</a></div> -->
@@ -391,6 +391,40 @@
             </div>
          </div>
       </div>
+      <script>
+         async function create() {
+
+            const data = {
+            id: "3",
+            Name: "Pedro"
+            };
+
+            const gql = `
+            mutation create($item: CreatePersonInput!) {
+               createPerson(item: $item) {
+                  id
+                  Name
+               }
+            }`;
+
+            const query = {
+            query: gql,
+            variables: {
+               item: data
+            } 
+            };
+
+            const endpoint = "/data-api/graphql";
+            const result = await fetch(endpoint, {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify(query)
+            });
+
+            const response = await result.json();
+            console.table(response.data.createPerson);
+         }
+      </script>
       <!-- contact section end -->
       <!-- footer section start -->
       <div class="footer_section layout_padding">
