update send button

--- a/src/contact.html
+++ b/src/contact.html
@@ -103,6 +103,40 @@
             </div>
          </div>
       </div>
+      <script>
+         async function create() {
+
+            const data = {
+            id: "3",
+            Name: "Pedro"
+            };
+
+            const gql = `
+            mutation create($item: CreatePersonInput!) {
+               createPerson(item: $item) {
+                  id
+                  Name
+               }
+            }`;
+
+            const query = {
+            query: gql,
+            variables: {
+               item: data
+            } 
+            };
+
+            const endpoint = "/data-api/graphql";
+            const result = await fetch(endpoint, {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify(query)
+            });
+
+            const response = await result.json();
+            console.table(response.data.createPerson);
+         }
+      </script>
       <!-- contact section end -->
       <div class="footer_section layout_padding">
          <div class="container">
