--- a/src/index.html
+++ b/src/index.html
@@ -377,7 +377,7 @@
                         </div>
                         <div class="send_btn">
                            <!-- <div type="text" class="main_bt"><a href="#">SEND</a></div> -->
-                           <button class="button btn111">SEND</button>
+                           <button class="button btn111" onclick="create()">SEND</button>
                         </div>
                      </div>
                   </div>
