--- a/src/index.html
+++ b/src/index.html
@@ -364,20 +364,20 @@
                   <div class="mail_section">
                      <div class="email_text">
                         <div class="form-group">
-                           <input required type="text" class="email-bt" placeholder="Name*" name="Name">
+                           <input required type="text" id="name" class="email-bt" placeholder="Name*" name="Name">
                         </div>
                         <div class="form-group">
-                           <input required type="text" class="email-bt" placeholder="Email*" name="Email">
+                           <input required type="text" id="mail" class="email-bt" placeholder="Email*" name="Email">
                         </div>
                         <div class="form-group">
-                           <input required type="text" class="email-bt" placeholder="Phone Number*" name="mobile">
+                           <input required type="text" id="numb" class="email-bt" placeholder="Phone Number*" name="mobile">
                         </div>
                         <div class="form-group">
                            <textarea required class="massage-bt" placeholder="Massage*" rows="5" id="comment" name="Massage*"></textarea>
                         </div>
                         <div class="send_btn">
                            <!-- <div type="text" class="main_bt"><a href="#">SEND</a></div> -->
-                           <button class="button btn111" onclick="create()">SEND</button>
+                           <button class="button btn111" onclick="create(name,mail,numb,Comment)">SEND</button>
                         </div>
                      </div>
                   </div>
@@ -392,14 +392,14 @@
          </div>
       </div>
       <script>
-         async function create() {
+         async function create(name,mail,numb,comment) {
 
             const data = {
-            id: "4",
-            Name: "Pedro",
-            mailId: "abc@email.com",
-            mob: "0192837465",
-            message: "kjgsigsakjgfg"
+            id: "5",
+            Name: name,
+            mailId: mail,
+            mob: numb,
+            message: comment
             };
 
             const gql = `
