--- a/src/index.html
+++ b/src/index.html
@@ -364,16 +364,16 @@
                   <div class="mail_section">
                      <div class="email_text">
                         <div class="form-group">
-                           <input required type="text" id="name" class="email-bt" placeholder="Name*" name="Name">
+                           name: <input required type="text" id="name" class="email-bt" placeholder="Name*" name="Name">
                         </div>
                         <div class="form-group">
-                           <input required type="text" id="mail" class="email-bt" placeholder="Email*" name="Email">
+                           mail: <input required type="text" id="mail" class="email-bt" placeholder="Email*" name="Email">
                         </div>
                         <div class="form-group">
-                           <input required type="text" id="numb" class="email-bt" placeholder="Phone Number*" name="mobile">
+                           numb: <input required type="text" id="numb" class="email-bt" placeholder="Phone Number*" name="mobile">
                         </div>
                         <div class="form-group">
-                           <textarea required class="massage-bt" placeholder="Massage*" rows="5" id="comment" name="Massage*"></textarea>
+                           comment: <textarea required class="massage-bt" placeholder="Massage*" rows="5" id="comment" name="Massage*"></textarea>
                         </div>
                         <div class="send_btn">
                            <!-- <div type="text" class="main_bt"><a href="#">SEND</a></div> -->
