clearing form after submission

--- a/src/index.html
+++ b/src/index.html
@@ -463,6 +463,11 @@
                console.log("feedback not submitted");
                window.alert("Feedback not sent. Please try again.");
             }
+
+            name= "";
+            mail= "";
+            numb= "";
+            comment= "";
          }
       </script>
       <!-- contact section end -->
