experimenting wirh create function

--- a/src/index.html
+++ b/src/index.html
@@ -394,10 +394,10 @@
       <script>
          async function create() {
 
-            const name = document.getElementById("name").value;
-            const mail = document.getElementById("mail").value;
-            const numb = document.getElementById("numb").value;
-            const comment = document.getElementById("comment").value;
+            const name1 = document.getElementById("name").value;
+            const mail1 = document.getElementById("mail").value;
+            const numb1 = document.getElementById("numb").value;
+            const comment1 = document.getElementById("comment").value;
             
             const now = new Date();
             const timestamp = now.toISOString();
