experimenting with create function

--- a/src/index.html
+++ b/src/index.html
@@ -405,10 +405,10 @@
             
             const data = {
             id: timestamp,
-            Name: name,
-            mailId: mail,
-            mob: numb,
-            message: comment
+            Name: name1,
+            mailId: mail1,
+            mob: numb1,
+            message: comment1
             };
 
             const gql = `
