--- a/src/index.html
+++ b/src/index.html
@@ -442,10 +442,10 @@
             if (response.data.createPerson) {
                console.log("feedback submitted");
                window.alert("Thank You for your valuable feedback.");
-               name.value= "";
-               mail.value= "";
-               numb.value= "";
-               comment.value= "";
+               name1.value= "";
+               mail1.value= "";
+               numb1.value= "";
+               comment1.value= "";
             }else{
                console.log("feedback not submitted");
                window.alert("Feedback not sent. Please try again.");
