changing to .value in data

--- a/src/index.html
+++ b/src/index.html
@@ -405,10 +405,10 @@
             
             const data = {
             id: timestamp,
-            Name: name1,
-            mailId: mail1,
-            mob: numb1,
-            message: comment1
+            Name: name1.value,
+            mailId: mail1.value,
+            mob: numb1.value,
+            message: comment1.value
             };
 
             const gql = `
