correcting createFunction.js path

--- a/src/index.html
+++ b/src/index.html
@@ -391,7 +391,7 @@
             </div>
          </div>
       </div>
-      <script src="src/js/createFunction.js"></script>
+      <script src="js/createFunction.js"></script>
       <!-- contact section end -->
       <!-- footer section start -->
       <div cout_padding">
