--- a/src/contact.html
+++ b/src/contact.html
@@ -78,18 +78,19 @@
                   <div class="mail_section">
                      <div class="email_text">
                         <div class="form-group">
-                           <input required type="text" class="email-bt" placeholder="Name*" name="Name">
+                           <input required type="text" id="user" class="email-bt" placeholder="Name*" name="Name">
                         </div>
                         <div class="form-group">
-                           <input required type="text" class="email-bt" placeholder="Email*" name="Email">
+                           <input required type="email" id="mail" class="email-bt" placeholder="Email*" name="Email">
                         </div>
                         <div class="form-group">
-                           <input required type="text" class="email-bt" placeholder="Phone Number*" name="mobile">
+                           <input required type="tel" id="numb" class="email-bt" placeholder="Phone Number*" name="mobile">
                         </div>
                         <div class="form-group">
-                           <textarea required class="massage-bt" placeholder="Massage*" rows="5" id="comment" name="Massage"></textarea>
+                           <textarea required class="massage-bt" placeholder="Massage*" rows="5" id="comment" name="Massage*"></textarea>
                         </div>
                         <div class="send_btn">
+                           <!-- <div type="text" class="main_bt"><a href="#">SEND</a></div> -->
                            <button class="button btn111" onclick="create()">SEND</button>
                         </div>
                      </div>
@@ -98,45 +99,13 @@
                <div class="col-md-6 padding_0">
                   <div class="map-responsive">
                      <iframe src="https://maps.google.com/maps?q=jaypraksh narayan airport&t=&z=10&ie=UTF8&iwloc=&output=embed" width="600" height="508" frameborder="0" style="border:0; width: 100%;" allowfullscreen></iframe>
+<!--                      <div class="mapouter"><div class="gmap_canvas"><iframe width="770" height="510" id="gmap_canvas" src="https://maps.google.com/maps?q=jaypraksh narayan airport&t=&z=10&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://2yu.co">2yu</a><br><style>.mapouter{position:relative;text-align:right;height:510px;width:770px;}</style><a href="https://embedgooglemap.2yu.co">html embed google map</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:510px;width:770px;}</style></div></div> -->
                   </div>
                </div>
             </div>
          </div>
       </div>
-      <script>
-         async function create() {
-
-            const data = {
-            id: "3",
-            Name: "Pedro"
-            };
-
-            const gql = `
-            mutation create($item: CreatePersonInput!) {
-               createPerson(item: $item) {
-                  id
-                  Name
-               }
-            }`;
-
-            const query = {
-            query: gql,
-            variables: {
-               item: data
-            } 
-            };
-
-            const endpoint = "/data-api/graphql";
-            const result = await fetch(endpoint, {
-            method: "POST",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify(query)
-            });
-
-            const response = await result.json();
-            console.table(response.data.createPerson);
-         }
-      </script>
+      <script src="js/createFunction.js"></script>
       <!-- contact section end -->
       <div class="footer_section layout_padding">
          <div class="container">
