--- a/src/index.html
+++ b/src/index.html
@@ -394,7 +394,7 @@
       <script src="js/createFunction.js"></script>
       <!-- contact section end -->
       <!-- footer section start -->
-      <div class="footer_section layout_padding">
+      <!-- <div class="footer_section layout_padding">
          <div class="container">
             <div class="row">
                <div class="col-lg-3 col-sm-6">
@@ -442,7 +442,7 @@
             </div>
          </div>
       </div>
-      <!-- footer section end -->
+      footer section end -->
       <!-- copyright section start -->
       <div class="copyright_section">
          <div class="container">
