--- a/src/contact.html
+++ b/src/contact.html
@@ -56,9 +56,6 @@
                      <li class="nav-item">
                         <a class="nav-link" style="color: #f76d37;" href="contact.html">Contact Us</a>
                      </li>
-                     <!-- <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
-                     </li> -->
                   </ul>
                </div>
             </nav>
@@ -90,7 +87,6 @@
                            <textarea required class="massage-bt" placeholder="Massage*" rows="5" id="comment" name="Massage*"></textarea>
                         </div>
                         <div class="send_btn">
-                           <!-- <div type="text" class="main_bt"><a href="#">SEND</a></div> -->
                            <button class="button btn111" onclick="create()">SEND</button>
                         </div>
                      </div>
@@ -99,23 +95,21 @@
                <div class="col-md-6 padding_0">
                   <div class="map-responsive">
                      <iframe src="https://maps.google.com/maps?q=jaypraksh narayan airport&t=&z=10&ie=UTF8&iwloc=&output=embed" width="600" height="508" frameborder="0" style="border:0; width: 100%;" allowfullscreen></iframe>
-<!--                      <div class="mapouter"><div class="gmap_canvas"><iframe width="770" height="510" id="gmap_canvas" src="https://maps.google.com/maps?q=jaypraksh narayan airport&t=&z=10&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://2yu.co">2yu</a><br><style>.mapouter{position:relative;text-align:right;height:510px;width:770px;}</style><a href="https://embedgooglemap.2yu.co">html embed google map</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:510px;width:770px;}</style></div></div> -->
                   </div>
                </div>
             </div>
          </div>
       </div>
-      <script src="js/createFunction.js"></script>
       <!-- contact section end -->
       <div class="footer_section layout_padding">
          <div class="container">
             <div class="row">
                <div class="col-lg-3 col-sm-6">
                   <h3 class="useful_text">About</h3>
-                  <p class="footer_text">consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation u</p>
+                  <p class="footer_text">We are a group of people working together with a common mindset. Our vision is to make travelling easier and safer. We visit places, talk to local people and then review places along with genuine feedback from other visitors and latest images.</p>
                </div>
                <div class="col-lg-3 col-sm-6">
-                  <h3 class="useful_text">Menu</h3>
+                  <h3 class="useful_text" style="text-align: center;">Menu</h3>
                   <div class="footer_menu">
                      <ul>
                         <li><a href="index.html">Home</a></li>
@@ -128,26 +122,36 @@
                </div>
                <div class="col-lg-3 col-sm-6">
                   <h1 class="useful_text">Useful Link</h1>
-                  <p class="dummy_text">Adipiscing Elit, sed do Eiusmod Tempor incididunt </p>
+                  <ul>
+                     <li>
+                        <a href="#" style="color: white;">Trip planner</a>
+                     </li>
+                     <li>
+                        <a href="#" style="color: white;">Support us</a>
+                     </li>
+                     <li>
+                        <a href="#" style="color: white;">Contact a guide</a>
+                     </li>
+                     <li>
+                        <a href="#" style="color: white;">Work with us</a>
+                     </li>
+                     <li>
+                        <a href="#" style="color: white;">Emergency contact</a>
+                     </li>
+                  </ul>
                </div>
                <div class="col-lg-3 col-sm-6">
                   <h1 class="useful_text">Contact Us</h1>
                   <div class="location_text">
                      <ul>
                         <li>
-                           <a href="#">
                            <i class="fa fa-map-marker" aria-hidden="true"></i><span class="padding_left_10">Address : Loram Ipusm</span>
-                           </a>
                         </li>
                         <li>
-                           <a href="#">
-                           <i class="fa fa-phone" aria-hidden="true"></i><span class="padding_left_10">Call : +01 1234567890</span>
-                           </a>
+                           <i class="fa fa-phone" aria-hidden="true"></i><span class="padding_left_10">Call : +91 1234567890</span>
                         </li>
                         <li>
-                           <a href="#">
-                           <i class="fa fa-envelope" aria-hidden="true"></i><span class="padding_left_10">Email : demo@gmail.com</span>
-                           </a>
+                           <i class="fa fa-envelope" aria-hidden="true"></i><span class="padding_left_10">Email : abc@email.com</span>
                         </li>
                      </ul>
                   </div>
@@ -156,19 +160,20 @@
          </div>
       </div>
       <!-- footer section end -->
-      <!-- copyright section start -->
-      <div class="copyright_section">
+      <!-- Developer section start -->
+      <div class="Developer">
          <div class="container">
-            <p class="copyright_text">Design by Sandeep</a></p>
+            <p class="Developer_text"><a href="https://www.instagram.com/me.shivaansh_65/">Developed by Sandeep</a></p>
          </div>
       </div>
-      <!-- copyright section end -->
+      <!-- Developer section end -->
       <!-- Javascript files-->
       <script src="js/jquery.min.js"></script>
       <script src="js/popper.min.js"></script>
       <script src="js/bootstrap.bundle.min.js"></script>
       <script src="js/jquery-3.0.0.min.js"></script>
       <script src="js/plugin.js"></script>
+      <script src="js/createFunction.js"></script>
       <!-- sidebar -->
       <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
       <script src="js/custom.js"></script>     
