--- a/src/services.html
+++ b/src/services.html
@@ -120,10 +120,10 @@
             <div class="row">
                <div class="col-lg-3 col-sm-6">
                   <h3 class="useful_text">About</h3>
-                  <p class="footer_text">consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation u</p>
+                  <p class="footer_text">We are a group of people working together with a common mindset. Our vision is to make travelling easier and safer. We visit places, talk to local people and then review places along with genuine feedback from other visitors and latest images.</p>
                </div>
                <div class="col-lg-3 col-sm-6">
-                  <h3 class="useful_text">Menu</h3>
+                  <h3 class="useful_text" style="text-align: center;">Menu</h3>
                   <div class="footer_menu">
                      <ul>
                         <li><a href="index.html">Home</a></li>
@@ -136,26 +136,36 @@
                </div>
                <div class="col-lg-3 col-sm-6">
                   <h1 class="useful_text">Useful Link</h1>
-                  <p class="dummy_text">Adipiscing Elit, sed do Eiusmod Tempor incididunt </p>
+                  <ul>
+                     <li>
+                        <a href="#" style="color: white;">Trip planner</a>
+                     </li>
+                     <li>
+                        <a href="#" style="color: white;">Support us</a>
+                     </li>
+                     <li>
+                        <a href="#" style="color: white;">Contact a guide</a>
+                     </li>
+                     <li>
+                        <a href="#" style="color: white;">Work with us</a>
+                     </li>
+                     <li>
+                        <a href="#" style="color: white;">Emergency contact</a>
+                     </li>
+                  </ul>
                </div>
                <div class="col-lg-3 col-sm-6">
                   <h1 class="useful_text">Contact Us</h1>
                   <div class="location_text">
                      <ul>
                         <li>
-                           <a href="#">
                            <i class="fa fa-map-marker" aria-hidden="true"></i><span class="padding_left_10">Address : Loram Ipusm</span>
-                           </a>
                         </li>
                         <li>
-                           <a href="#">
-                           <i class="fa fa-phone" aria-hidden="true"></i><span class="padding_left_10">Call : +01 1234567890</span>
-                           </a>
+                           <i class="fa fa-phone" aria-hidden="true"></i><span class="padding_left_10">Call : +91 1234567890</span>
                         </li>
                         <li>
-                           <a href="#">
-                           <i class="fa fa-envelope" aria-hidden="true"></i><span class="padding_left_10">Email : demo@gmail.com</span>
-                           </a>
+                           <i class="fa fa-envelope" aria-hidden="true"></i><span class="padding_left_10">Email : abc@email.com</span>
                         </li>
                      </ul>
                   </div>
@@ -164,13 +174,13 @@
          </div>
       </div>
       <!-- footer section end -->
-      <!-- copyright section start -->
-      <div class="copyright_section">
+      <!-- Developer section start -->
+      <div class="Developer">
          <div class="container">
-            <p class="copyright_text">Design by Sandeep</a></p>
+            <p class="Developer_text"><a href="https://www.instagram.com/me.shivaansh_65/">Developed by Sandeep</a></p>
          </div>
       </div>
-      <!-- copyright section end -->
+      <!-- Developer section end -->
       <!-- Javascript files-->
       <script src="js/jquery.min.js"></script>
       <script src="js/popper.min.js"></script>
