commit all changes-2

--- a/src/about.html
+++ b/src/about.html
@@ -45,7 +45,7 @@
                         <a class="nav-link" href="index.html">Home</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" style="color: #f76d37;" href="about.html">About Us</a>
+                        <a class="nav-link" style="color: #00b3ff;" href="about.html">About Us</a>
                      </li>
                      <li class="nav-item">
                         <a class="nav-link" href="gallery.html">Gallery</a>
@@ -72,13 +72,13 @@
                <div class="col-md-6">
                   <div class="about_taital_main">
                      <div class="about_taital">About Us</div>
-                     <p class="about_text">Full cleaning and housekeeping services for companies and households.</p>
-                     <p class="about_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.Lorem Ipsum is simply</p>
+                     <p class="about_text">We are a group of people working together with a common mindset. Our vision is to make travelling easier and safer. We visit places, talk to local people and then review places along with genuine feedback from other visitors and latest images.</p>
+                     <p class="about_text">Apart from all these, We provide overview of the local people behavior and supportiveness, cleaniness around the spot and accessibility to the basic need items.</p>
                      <!--  Apart from all these, We provide overview of the local people behavior and supportiveness, cleaniness around the spot and accessibility to the basic need items. -->
                   </div>
                </div>
                <div class="col-md-6">
-                  <div class="about_imgage" style="margin-top: 15px;"><img src="images/about-image.JPG"></div>
+                  <div class="about_imgage" style="margin-top: 50px;"><img src="images/about-image.JPG"></div>
                </div>
             </div>
          </div>
@@ -111,13 +111,13 @@
                         <a href="#" style="color: white;">Trip planner</a>
                      </li>
                      <li>
-                        <a href="#" style="color: white;">Support us</a>
-                     </li>
-                     <li>
                         <a href="#" style="color: white;">Contact a guide</a>
                      </li>
                      <li>
                         <a href="#" style="color: white;">Work with us</a>
+                     </li>
+                     <li>
+                        <a href="#" style="color: white;">Support us</a>
                      </li>
                      <li>
                         <a href="#" style="color: white;">Emergency contact</a>
