--- a/src/services.html
+++ b/src/services.html
@@ -51,7 +51,7 @@
                         <a class="nav-link" href="gallery.html">Gallery</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" style="color: #f76d37;" href="services.html">Services</a>
+                        <a class="nav-link" style="color: #00b3ff;" href="services.html">Services</a>
                      </li>
                      <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact Us</a>
@@ -84,7 +84,7 @@
                         </div>
                         <h3 class="decorate_text">Original Coffee</h3>
                         <p class="tation_text">Exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea </p>
-                        <!-- <div class="readmore_bt"><a href="#">Read More</a></div> -->
+                        <div class="readmore_bt"><a href="#">Read More</a></div>
                      </div>
                   </div>
                   <div class="col-lg-4 col-sm-12 col-md-4">
@@ -95,7 +95,7 @@
                         </div>
                         <h3 class="decorate_text">20 Coffee Flavors</h3>
                         <p class="tation_text">Exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea </p>
-                        <!-- <div class="readmore_bt"><a href="#">Read More</a></div> -->
+                        <div class="readmore_bt"><a href="#">Read More</a></div>
                      </div>
                   </div>
                   <div class="col-lg-4 col-sm-12 col-md-4">
@@ -106,7 +106,7 @@
                         </div>
                         <h3 class="decorate_text">Pleasant Abient</h3>
                         <p class="tation_text">Exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea </p>
-                        <!-- <div class="readmore_bt"><a href="#">Read More</a></div> -->
+                        <div class="readmore_bt"><a href="#">Read More</a></div>
                      </div>
                   </div>
                </div>
@@ -141,13 +141,13 @@
                         <a href="#" style="color: white;">Trip planner</a>
                      </li>
                      <li>
-                        <a href="#" style="color: white;">Support us</a>
-                     </li>
-                     <li>
                         <a href="#" style="color: white;">Contact a guide</a>
                      </li>
                      <li>
                         <a href="#" style="color: white;">Work with us</a>
+                     </li>
+                     <li>
+                        <a href="#" style="color: white;">Support us</a>
                      </li>
                      <li>
                         <a href="#" style="color: white;">Emergency contact</a>
