--- a/src/contact.html
+++ b/src/contact.html
@@ -54,7 +54,7 @@
                         <a class="nav-link" href="services.html">Services</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" style="color: #f76d37;" href="contact.html">Contact Us</a>
+                        <a class="nav-link" style="color: #00b3ff;" href="contact.html">Contact Us</a>
                      </li>
                   </ul>
                </div>
@@ -127,13 +127,13 @@
                         <a href="#" style="color: white;">Trip planner</a>
                      </li>
                      <li>
-                        <a href="#" style="color: white;">Support us</a>
-                     </li>
-                     <li>
                         <a href="#" style="color: white;">Contact a guide</a>
                      </li>
                      <li>
                         <a href="#" style="color: white;">Work with us</a>
+                     </li>
+                     <li>
+                        <a href="#" style="color: white;">Support us</a>
                      </li>
                      <li>
                         <a href="#" style="color: white;">Emergency contact</a>
