--- a/src/gallery.html
+++ b/src/gallery.html
@@ -48,7 +48,7 @@
                         <a class="nav-link" href="about.html">About Us</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" style="color: #f76d37;" href="gallery.html">Gallery</a>
+                        <a class="nav-link" style="color: #00b3ff;" href="gallery.html">Gallery</a>
                      </li>
                      <li class="nav-item">
                         <a class="nav-link" href="services.html">Services</a>
@@ -56,9 +56,6 @@
                      <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact Us</a>
                      </li>
-                     <!-- <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
-                     </li> -->
                   </ul>
                </div>
             </nav>
@@ -71,15 +68,14 @@
             <div class="row">
                <div class="col-sm-12">
                   <h1 class="gallery_taital">Our Gallery</h1>
-                  <p class="gallery_text">Lorem Ipsum is simply dummy text of printing typesetting ststry lorem Ipsum the industry'ndard dummy text ever since of the 1500s, when an unknown printer took a galley of type and scra make a type specimen book. It has</p>
-               </div>
+                  <p class="gallery_text">Go through the gallery and plan your vacation with the best view. These are some of the best and most satisfying views you can experience around the world. Click on the images to know more about them and the place they represent.</p>               </div>
             </div>
             <div class="">
                <div class="gallery_section_2">
                   <div class="row">
                      <div class="col-md-4">
                         <div class="container_main">
-                           <img src="images/img-1.png" alt="Avatar" class="image">
+                           <img src="images/img-1.jpg" alt="Avatar" class="image">
                            <div class="overlay">
                               <div class="text"><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></div>
                            </div>
@@ -87,7 +83,7 @@
                      </div>
                      <div class="col-md-4">
                         <div class="container_main">
-                           <img src="images/img-2.png" alt="Avatar" class="image">
+                           <img src="images/img-2.jpg" alt="Avatar" class="image">
                            <div class="overlay">
                               <div class="text"><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></div>
                            </div>
@@ -95,7 +91,7 @@
                      </div>
                      <div class="col-md-4">
                         <div class="container_main">
-                           <img src="images/img-3.png" alt="Avatar" class="image">
+                           <img src="/src/images/img-3.jpg" alt="Avatar" class="image">
                            <div class="overlay">
                               <div class="text"><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></div>
                            </div>
@@ -107,7 +103,7 @@
                   <div class="row">
                      <div class="col-md-4">
                         <div class="container_main">
-                           <img src="images/img-4.png" alt="Avatar" class="image">
+                           <img src="images/img-4.jpg" alt="Avatar" class="image">
                            <div class="overlay">
                               <div class="text"><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></div>
                            </div>
@@ -115,7 +111,7 @@
                      </div>
                      <div class="col-md-4">
                         <div class="container_main">
-                           <img src="images/img-5.png" alt="Avatar" class="image">
+                           <img src="images/img-5.jpg" alt="Avatar" class="image">
                            <div class="overlay">
                               <div class="overlay">
                                  <div class="text"><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></div>
@@ -125,7 +121,7 @@
                      </div>
                      <div class="col-md-4">
                         <div class="container_main">
-                           <img src="images/img-6.png" alt="Avatar" class="image">
+                           <img src="images/img-6.jpg" alt="Avatar" class="image">
                            <div class="overlay">
                               <div class="overlay">
                                  <div class="text"><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></div>
@@ -139,7 +135,7 @@
                   <div class="row">
                      <div class="col-md-4">
                         <div class="container_main">
-                           <img src="images/img-7.png" alt="Avatar" class="image">
+                           <img src="images/img-7.jpg" alt="Avatar" class="image">
                            <div class="overlay">
                               <div class="text"><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></div>
                            </div>
@@ -147,7 +143,7 @@
                      </div>
                      <div class="col-md-4">
                         <div class="container_main">
-                           <img src="images/img-8.png" alt="Avatar" class="image">
+                           <img src="images/img-8.JPG" alt="Avatar" class="image">
                            <div class="overlay">
                               <div class="text"><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></div>
                            </div>
@@ -155,7 +151,7 @@
                      </div>
                      <div class="col-md-4">
                         <div class="container_main">
-                           <img src="images/img-9.png" alt="Avatar" class="image">
+                           <img src="images/img-9.JPG" alt="Avatar" class="image">
                            <div class="overlay">
                               <div class="text"><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></div>
                            </div>
@@ -194,13 +190,13 @@
                         <a href="#" style="color: white;">Trip planner</a>
                      </li>
                      <li>
-                        <a href="#" style="color: white;">Support us</a>
-                     </li>
-                     <li>
                         <a href="#" style="color: white;">Contact a guide</a>
                      </li>
                      <li>
                         <a href="#" style="color: white;">Work with us</a>
+                     </li>
+                     <li>
+                        <a href="#" style="color: white;">Support us</a>
                      </li>
                      <li>
                         <a href="#" style="color: white;">Emergency contact</a>
