--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
                <div class="collapse navbar-collapse" id="navbarNav">
                   <ul class="navbar-nav ml-auto">
                      <li class="nav-item">
-                        <a class="nav-link" style="color: #f76d37;" href="index.html">Home</a>
+                        <a class="nav-link" style="color: #00b3ff;" href="index.html">Home</a>
                      </li>
                      <li class="nav-item">
                         <a class="nav-link" href="about.html">About Us</a>
@@ -142,7 +142,7 @@
             <div class="row">
                <div class="col-sm-12">
                   <h1 class="gallery_taital">Our Gallery</h1>
-                  <p class="gallery_text">Lorem Ipsum is simply dummy text of printing typesetting ststry lorem Ipsum the industry'ndard dummy text ever since of the 1500s, when an unknown printer took a galley of type and scra make a type specimen book. It has</p>
+                  <p class="gallery_text">Go through the gallery and plan your vacation with the best view. These are some of the best and most satisfying views you can experience around the world. Click on the images to know more about them and the place they represent.</p>
                </div>
             </div>
             <div class="">
@@ -150,7 +150,7 @@
                   <div class="row">
                      <div class="col-md-4">
                         <div class="container_main">
-                           <img src="images/img-1.png" alt="Avatar" class="image">
+                           <img src="images/img-1.jpg" alt="Avatar" class="image">
                            <div class="overlay">
                               <div class="text"><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></div>
                            </div>
@@ -158,7 +158,7 @@
                      </div>
                      <div class="col-md-4">
                         <div class="container_main">
-                           <img src="images/img-2.png" alt="Avatar" class="image">
+                           <img src="images/img-2.jpg" alt="Avatar" class="image">
                            <div class="overlay">
                               <div class="text"><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></div>
                            </div>
@@ -166,7 +166,7 @@
                      </div>
                      <div class="col-md-4">
                         <div class="container_main">
-                           <img src="images/img-3.png" alt="Avatar" class="image">
+                           <img src="images/img-3.jpg" alt="Avatar" class="image">
                            <div class="overlay">
                               <div class="text"><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></div>
                            </div>
@@ -178,7 +178,7 @@
                   <div class="row">
                      <div class="col-md-4">
                         <div class="container_main">
-                           <img src="images/img-4.png" alt="Avatar" class="image">
+                           <img src="images/img-4.jpg" alt="Avatar" class="image">
                            <div class="overlay">
                               <div class="text"><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></div>
                            </div>
@@ -186,7 +186,7 @@
                      </div>
                      <div class="col-md-4">
                         <div class="container_main">
-                           <img src="images/img-5.png" alt="Avatar" class="image">
+                           <img src="images/img-5.jpg" alt="Avatar" class="image">
                            <div class="overlay">
                               <div class="overlay">
                                  <div class="text"><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></div>
@@ -196,7 +196,7 @@
                      </div>
                      <div class="col-md-4">
                         <div class="container_main">
-                           <img src="images/img-6.png" alt="Avatar" class="image">
+                           <img src="images/img-6.jpg" alt="Avatar" class="image">
                            <div class="overlay">
                               <div class="overlay">
                                  <div class="text"><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></div>
@@ -210,7 +210,7 @@
                   <div class="row">
                      <div class="col-md-4">
                         <div class="container_main">
-                           <img src="images/img-7.png" alt="Avatar" class="image">
+                           <img src="images/img-7.jpg" alt="Avatar" class="image">
                            <div class="overlay">
                               <div class="text"><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></div>
                            </div>
@@ -218,7 +218,7 @@
                      </div>
                      <div class="col-md-4">
                         <div class="container_main">
-                           <img src="images/img-8.png" alt="Avatar" class="image">
+                           <img src="images/img-8.JPG" alt="Avatar" class="image">
                            <div class="overlay">
                               <div class="text"><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></div>
                            </div>
@@ -294,7 +294,7 @@
             <div class="row">
                <div class="col-sm-12">
                   <h1 class="client_taital">Testimonial</h1>
-                  <p class="client_text">Eeven slightly believable. If you are going to use a passage of Lorem Ipsum, you need to</p>
+                  <p class="client_text">Here are the some of best views, that people have about us:</p>
                </div>
             </div>
          </div>
@@ -311,8 +311,8 @@
                    <div class="row">
                       <div class="col-md-12">
                          <div class="testimonial_section_2">
-                            <h4 class="client_name_text">Monila <span class="quick_icon"><img src="images/quick-icon.png"></span></h4>
-                            <p class="customer_text">many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All themany variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some embarrassing hidden in the middle of text. All the</p>
+                            <h4 class="client_name_text">Monila <span class="quick_icon"><img src="images/quick-icon.png" class="qicon"></span></h4>
+                            <p class="customer_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis vitae amet omnis magnam, quam dolore suscipit cupiditate aperiam corrupti vero sint eos laudantium, corporis quasi obcaecati, illo a reiciendis. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto accusamus velit consectetur possimus placeat ipsa error libero quae totam soluta minima facere inventore laborum, voluptatibus voluptatem, molestias quam dolor alias.</p>
                          </div>
                       </div>
                    </div>
@@ -325,8 +325,8 @@
                    <div class="row">
                       <div class="col-md-12">
                          <div class="testimonial_section_2">
-                            <h4 class="client_name_text">Monila <span class="quick_icon"><img src="images/quick-icon.png"></span></h4>
-                            <p class="customer_text">many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All themany variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some embarrassing hidden in the middle of text. All the</p>
+                            <h4 class="client_name_text">Emma <span class="quick_icon"><img src="images/quick-icon.png" class="qicon"></span></h4>
+                            <p class="customer_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem laborum molestias maiores perspiciatis dolorum ad facere, vitae dolores qui voluptatibus laudantium ex delectus vero accusamus sit alias praesentium aut voluptates. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente enim, dicta rem blanditiis, quia voluptas incidunt natus consequuntur aliquam libero rerum esse molestiae deleniti cupiditate eos repudiandae reprehenderit quod magnam!</p>
                          </div>
                       </div>
                    </div>
@@ -339,8 +339,8 @@
                    <div class="row">
                       <div class="col-md-12">
                          <div class="testimonial_section_2">
-                            <h4 class="client_name_text">Monila <span class="quick_icon"><img src="images/quick-icon.png"></span></h4>
-                            <p class="customer_text">many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All themany variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some embarrassing hidden in the middle of text. All the</p>
+                            <h4 class="client_name_text">Meena <span class="quick_icon"><img src="images/quick-icon.png" class="qicon"></span></h4>
+                            <p class="customer_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum quas earum voluptates, neque magnam quibusdam, vel dolorem dolore officiis debitis delectus sunt beatae pariatur nihil possimus fugit perferendis ex hic?</p>
                          </div>
                       </div>
                    </div>
@@ -417,13 +417,13 @@
                         <a href="#" style="color: white;">Trip planner</a>
                      </li>
                      <li>
-                        <a href="#" style="color: white;">Support us</a>
-                     </li>
-                     <li>
                         <a href="#" style="color: white;">Contact a guide</a>
                      </li>
                      <li>
                         <a href="#" style="color: white;">Work with us</a>
+                     </li>
+                     <li>
+                        <a href="#" style="color: white;">Support us</a>
                      </li>
                      <li>
                         <a href="#" style="color: white;">Emergency contact</a>
