--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
                         <a class="nav-link" href="gallery.html">Gallery</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="services.html">Services</a>
+                        <a class="nav-link" href="places.html">Places</a>
                      </li>
                      <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact Us</a>
@@ -239,55 +239,56 @@
          </div>
       </div>
       <!-- gallery section end -->
-      <!-- services section start -->
-      <div class="services_section layout_padding">
+      <!-- places section start -->
+      <div class="places_section layout_padding">
          <div class="container">
             <div class="row">
                <div class="col-sm-12">
-                  <h1 class="services_taital">Services</h1>
-                  <p class="services_text">Typesetting industry lorem Ipsum is simply dummy text of the </p>
+                  <h1 class="places_taital">Places</h1>
+                  <p class="places_text">These are the some featured places, you can visit, do adventurous activities and enjoy your vacation with your near and dear ones.</p>
+                  <p class="places_text">Also you can plan solo trips to many of these places and if you are a peace lover, then many of these places are gonna feel you like heaven.</p>
                </div>
             </div>
-            <div class="services_section_2">
+            <div class="places_section_2">
                <div class="row">
                   <div class="col-lg-4 col-sm-12 col-md-4">
                      <div class="box_main active">
                         <div class="house_icon">
-                           <img src="images/icon1.png" class="image_1">
-                           <img src="images/icon1.png" class="image_2">
+                           <img src="images/img-1.jpg" class="image_1">
+                           <img src="images/img-1.jpg" class="image_2">
                         </div>
                         <h3 class="decorate_text">Original Coffee</h3>
                         <p class="tation_text">Exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea </p>
-                        <div class="readmore_bt"><a href="services.html">Read More</a></div>
+                        <div class="readmore_bt"><a href="places.html">Read More</a></div>
                      </div>
                   </div>
                   <div class="col-lg-4 col-sm-12 col-md-4">
                      <div class="box_main">
                         <div class="house_icon">
-                           <img src="images/icon2.png" class="image_1">
-                           <img src="images/icon2.png" class="image_2">
+                           <img src="images/img-6.jpg" class="image_1">
+                           <img src="images/img-6.jpg" class="image_2">
                         </div>
                         <h3 class="decorate_text">20 Coffee Flavors</h3>
                         <p class="tation_text">Exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea </p>
-                        <div class="readmore_bt"><a href="services.html">Read More</a></div>
+                        <div class="readmore_bt"><a href="places.html">Read More</a></div>
                      </div>
                   </div>
                   <div class="col-lg-4 col-sm-12 col-md-4">
                      <div class="box_main">
                         <div class="house_icon">
-                           <img src="images/icon3.png" class="image_1">
-                           <img src="images/icon3.png" class="image_2">
+                           <img src="images/img-7.jpg" class="image_1">
+                           <img src="images/img-7.jpg" class="image_2">
                         </div>
                         <h3 class="decorate_text">Pleasant Abient</h3>
                         <p class="tation_text">Exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea </p>
-                        <div class="readmore_bt"><a href="services.html">Read More</a></div>
+                        <div class="readmore_bt"><a href="places.html">Read More</a></div>
                      </div>
                   </div>
                </div>
             </div>
          </div>
       </div>
-      <!-- services section end -->
+      <!-- places section end -->
       <!-- testimonial section start -->
       <div class="client_section layout_padding">
          <div class="container">
@@ -405,7 +406,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About Us</a></li>
                         <li><a href="gallery.html">Gallery</a></li>
-                        <li><a href="services.html">Services</a></li>
+                        <li><a href="places.html">Places</a></li>
                         <li><a href="contact.html">Contact Us</a></li>
                      </ul>
                   </div>
