--- a/src/places.html
+++ b/src/places.html
@@ -9,7 +9,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>Services</title>
+      <title>Places</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -51,7 +51,7 @@
                         <a class="nav-link" href="gallery.html">Gallery</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" style="color: #00b3ff;" href="services.html">Services</a>
+                        <a class="nav-link" style="color: #00b3ff;" href="places.html">Places</a>
                      </li>
                      <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact Us</a>
@@ -65,22 +65,22 @@
          </div>
       </div>
       <!--header section end -->
-      <!-- services section start -->
-      <div class="services_section layout_padding">
+      <!-- places section start -->
+      <div class="places_section layout_padding">
          <div class="container">
             <div class="row">
                <div class="col-sm-12">
-                  <h1 class="services_taital">Services</h1>
-                  <p class="services_text">Typesetting industry lorem Ipsum is simply dummy text of the </p>
+                  <h1 class="places_taital">Places</h1>
+                  <p class="places_text">Typesetting industry lorem Ipsum is simply dummy text of the </p>
                </div>
             </div>
-            <div class="services_section_2">
+            <div class="places_section_2">
                <div class="row">
                   <div class="col-lg-4 col-sm-12 col-md-4">
                      <div class="box_main active">
                         <div class="house_icon">
-                           <img src="images/icon1.png" class="image_1">
-                           <img src="images/icon1.png" class="image_2">
+                           <img src="images/img-1.jpg" class="image_1">
+                           <img src="images/img-1.jpg" class="image_2">
                         </div>
                         <h3 class="decorate_text">Original Coffee</h3>
                         <p class="tation_text">Exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea </p>
@@ -90,8 +90,8 @@
                   <div class="col-lg-4 col-sm-12 col-md-4">
                      <div class="box_main">
                         <div class="house_icon">
-                           <img src="images/icon2.png" class="image_1">
-                           <img src="images/icon2.png" class="image_2">
+                           <img src="images/img-6.jpg" class="image_1">
+                           <img src="images/img-6.jpg" class="image_2">
                         </div>
                         <h3 class="decorate_text">20 Coffee Flavors</h3>
                         <p class="tation_text">Exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea </p>
@@ -101,8 +101,8 @@
                   <div class="col-lg-4 col-sm-12 col-md-4">
                      <div class="box_main">
                         <div class="house_icon">
-                           <img src="images/icon3.png" class="image_1">
-                           <img src="images/icon3.png" class="image_2">
+                           <img src="images/img-8.JPG" class="image_1">
+                           <img src="images/img-8.JPG" class="image_2">
                         </div>
                         <h3 class="decorate_text">Pleasant Abient</h3>
                         <p class="tation_text">Exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea </p>
@@ -113,7 +113,7 @@
             </div>
          </div>
       </div>
-      <!-- services section end -->
+      <!-- places section end -->
       <!-- footer section start -->
       <div class="footer_section layout_padding">
          <div class="container">
@@ -129,7 +129,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About Us</a></li>
                         <li><a href="gallery.html">Gallery</a></li>
-                        <li><a href="services.html">Services</a></li>
+                        <li><a href="places.html">Places</a></li>
                         <li><a href="contact.html">Contact Us</a></li>
                      </ul>
                   </div>
