--- a/src/contact.html
+++ b/src/contact.html
@@ -51,7 +51,7 @@
                         <a class="nav-link" href="gallery.html">Gallery</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="services.html">Services</a>
+                        <a class="nav-link" href="places.html">Places</a>
                      </li>
                      <li class="nav-item">
                         <a class="nav-link" style="color: #00b3ff;" href="contact.html">Contact Us</a>
@@ -115,7 +115,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About Us</a></li>
                         <li><a href="gallery.html">Gallery</a></li>
-                        <li><a href="services.html">Services</a></li>
+                        <li><a href="places.html">Places</a></li>
                         <li><a href="contact.html">Contact Us</a></li>
                      </ul>
                   </div>
